<resources>
    <string name="app_name">Calculator</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">btnMinus</string>
    <string name="BtnMinus">-</string>
    <string name="BtnAC">AC</string>
    <string name="BtnX">X</string>
    <string name="BtnDiv">/</string>
    <string name="BtnDec">.</string>
    <string name="BtnEquals">=</string>
    <string name="BtnEq">=</string>
    <string name="btnRes">=</string>
</resources>
