<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn1Click"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn2Click"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn3Click"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn4Click"
                android:text="@string/btn4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn5Click"
                android:text="@string/btn5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn6Click"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn7Click"
                android:text="@string/btn7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn8Click"
                android:text="@string/btn8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn9Click"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btn0Click"
                android:text="@string/btn0" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnPlusClick"
                android:text="@string/btnPlus" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/BtnMinus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnACClick"
                android:text="@string/BtnAC" />

            <Button
                android:id="@+id/BtnX "
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="BtnXClick"
                android:text="@string/BtnX" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnDivClick"
                android:text="@string/BtnDiv" />

            <Button
                android:id="@+id/BtnDec"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="BtnDecClick"
                android:text="@string/BtnDec" />

            <Button
                android:id="@+id/btnRes"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="btnResClick"
                android:text="@string/btnRes" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>